infrastructure_old/controllers/longhorn-system.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  labels:
    toolkit.fluxcd.io/tenant: persistence
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  hosts:
  - longhorn.k8s
  gateways:
  - istio-ingress/k8s-gateway
  - mesh # applies to all the sidecars in the mesh
  http:
  - route:
    - destination:
        host: longhorn-frontend.longhorn-system.svc.cluster.local
        port:
          number: 80
