infrastructure_old/controllers/weave-gitops.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: weave-gitops
  namespace: flux-system
spec:
  hosts:
  - weave.k8s
  gateways:
  - istio-ingress/k8s-gateway
  - mesh # applies to all the sidecars in the mesh
  http:
  - route:
    - destination:
        host: weave-gitops.flux-system.svc.cluster.local
